[gd_scene load_steps=2 format=3 uid="uid://cfo0o66dvhiiq"]

[ext_resource type="Script" path="res://scenes/toolbox/examples/root/2d/inventory-systems/flexible-inventory/flexible-inventory.gd" id="1"]

[node name="FlexibleInventory" type="Node2D"]
script = ExtResource("1")

[node name="TestButtons" type="VBoxContainer" parent="."]
offset_left = 384.0
offset_top = 81.0
offset_right = 457.0
offset_bottom = 197.0

[node name="AddColumnButton" type="Button" parent="TestButtons"]
layout_mode = 2
text = "+ Column"

[node name="RemoveColumnButton" type="Button" parent="TestButtons"]
layout_mode = 2
text = "- Column"

[node name="RemoveSlotButton" type="Button" parent="TestButtons"]
layout_mode = 2
text = "- Slot"

[node name="AddSlotButton" type="Button" parent="TestButtons"]
layout_mode = 2
text = "+ Slot"

[node name="AddNewInventoryButton" type="Button" parent="TestButtons"]
layout_mode = 2
text = "+ Inventory"

[node name="InventoryContainer" type="Node2D" parent="."]

[node name="Label" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 23.0
text = "Try adding, removing and dragging."

[connection signal="pressed" from="TestButtons/AddColumnButton" to="." method="_on_AddColumnButton_pressed"]
[connection signal="pressed" from="TestButtons/RemoveColumnButton" to="." method="_on_RemoveColumnButton_pressed"]
[connection signal="pressed" from="TestButtons/RemoveSlotButton" to="." method="_on_RemoveSlotButton_pressed"]
[connection signal="pressed" from="TestButtons/AddSlotButton" to="." method="_on_AddSlotButton_pressed"]
[connection signal="pressed" from="TestButtons/AddNewInventoryButton" to="." method="_on_AddNewInventoryButton_pressed"]
